@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.1.2
+  * SCHEMA-358. Adds a withTable(TableLayoutDesc) method to
+      InstanceBuilder.TableBuilder.
   * SCHEMA-462. Include support for CDH 4.3.
   * SCHEMA-258. Fix: HBaseKijiTable.getRegions() closes the underlying HTable.
   * SCHEMA-466. Fall back to $HADOOP_HOME/lib/native/ for native libraries.
